# EZGripper

./: README.md
ezgripper_control/: CMakeLists.txt  package.xml
ezgripper_description/: CMakeLists.txt  package.xml
ezgripper_driver/: package.xml  setup.py
ezgripper_driver/config/: controllers_dual.yaml  controllers_dual_gen1.yaml  controllers_dual_gen2.yaml  controllers_quad.yaml
ezgripper_driver/launch/: CloseDual  CloseQuad  OpenDual  OpenQuad  action_server.launch  display.launch  gazebo.launch  joy.launch  joy2.launch  joy2sync.launch  joy_tcp.launch  robotquad_gazebo.launch
ezgripper_driver/meshes/collision/: SAKE_Finger_L1_Gen2.stl  SAKE_Finger_L2_Gen2.stl  SAKE_Palm_Dual_Gen2.stl
ezgripper_driver/nodes/: client.py  ezgripper.py  ezgripperGUI.py  ezgripper_action_server.py  ezgripper_interface.py
ezgripper_driver/nodes/gripper_actuation/: CloseDualGen1  CloseDualGen2  CloseQuad  OpenDualGen1  OpenDualGen2  OpenQuad  close_gripper  open_gripper
ezgripper_driver/rviz/: urdf.rviz
ezgripper_driver/scripts/: client.py  ezgripperGUI.py  ezgripper_action_server.py  ezgripper_gui.py  ezgripper_joy_action_client.py
ezgripper_driver/src/ezgripper_libs/: ezgripper_interface.py  lib_robotis.py
ezgripper_driver/urdf/: README.md  ezgripper_dual.urdf.xacro  ezgripper_dual.urdf.xacro-call-inside-robot-arm-urdf  ezgripper_dual_articulated.urdf.xacro  ezgripper_dual_gen2.urdf.xacro  ezgripper_dual_gen2_articulated.urdf.xacro  ezgripper_dual_gen2_standalone.urdf.xacro  ezgripper_dual_standalone.urdf.xacro  ezgripper_quad.urdf.xacro  ezgripper_quad.urdf.xacro-call-inside-robot-arm-urdf  ezgripper_quad_standalone.urdf.xacro
ezgripper_driver/urdf/dual_gen1/: ezgripper_dual_gen1.urdf.xacro  ezgripper_dual_gen1.urdf.xacro-call-inside-robot-arm-urdf  ezgripper_dual_gen1_standalone.urdf.xacro
ezgripper_driver/urdf/dual_gen2/: ezgripper_dual_gen2_articulated.urdf.xacro  ezgripper_dual_gen2_standalone.urdf.xacro
ezgripper_driver/urdf/quad/: ezgripper_quad.urdf.xacro  ezgripper_quad.urdf.xacro-call-inside-robot-arm-urdf  ezgripper_quad_standalone.urdf.xacro
ezgripper_dual_gen1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ezgripper_dual_gen2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ezgripper_dual_gen2_single_mount_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ezgripper_dual_gen2_triple_mount_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+256 files in other folders)
