<?xml version="1.0"?>
<package>
  <name>ezgripper_driver</name>
  <version>0.5.0</version>
  <description>The EZgripper driver package</description>

  <maintainer email="support@SAKErobotics.com">support</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gripper4_description</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

	<!-- Python Dependencies -->
  <run_depend>python3-serial</run_depend>

	<!-- ROS Dependencies -->
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
	<run_depend>joint_state_publisher_gui</run_depend>
	<run_depend>joint_state_controller</run_depend>
	<run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
	<run_depend>gazebo_ros_control</run_depend>
  <run_depend>moveit</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>

	<!-- Gazebo mimic dependencies -->
	<run_depend>roboticsgroup_upatras_gazebo_plugins</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
